# 41068_Robotics_Studio_1

./: README.md  firefighting_gui_full.py  forest_green_preview.html  ros2_dual_camera_gui.py  steamdeck_gui.py  test_forest_green_gui.py
Simulation_Environment/41068_ignition_bringup/: README.md
Simulation_Environment/install/: local_setup.sh  setup.sh
Simulation_Environment/install/41068_ignition_bringup/share/41068_ignition_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
Simulation_Environment/install/41068_ignition_bringup/share/41068_ignition_bringup/cmake/: 41068_ignition_bringupConfig-version.cmake  41068_ignition_bringupConfig.cmake
Simulation_Environment/log/: latest_build
forest_finder/: CMakeLists.txt  package.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/41068_ignition_bringup/lib/41068_ignition_bringup/: odom_tf_publisher.py
install/41068_ignition_bringup/share/41068_ignition_bringup/: local_setup.sh  package.sh
install/41068_ignition_bringup/share/41068_ignition_bringup/config/: gazebo_bridge_drone.yaml  gazebo_bridge_husky.yaml  husky_slam_nav2.rviz  robot_localization.yaml
install/41068_ignition_bringup/share/41068_ignition_bringup/launch/: 41068_gui.launch.py  41068_navigation.launch.py
install/41068_ignition_bringup/share/41068_ignition_bringup/urdf_drone/: parrot.urdf.xacro
install/41068_ignition_bringup/share/41068_ignition_bringup/worlds/: large_demo.sdf
install/drone_teleop/lib/drone_teleop/: combined_joy_teleop  drone_joy_teleop
install/drone_teleop/share/drone_teleop/: local_setup.sh  package.sh  package.xml
install/drone_teleop/share/drone_teleop/launch/: combined_joy_teleop.launch.py  drone_joy_teleop.launch.py  fire_centering.launch.py
log/: latest_build
simulations/: INTEGRATED_SYSTEM_README.md
simulations/41068_ignition_bringup/: AUTONOMOUS_FIREFIGHTER_README.md  CMakeLists.txt  COLCON_IGNORE  COLLISION_FIX_SUMMARY.md  README_Navigation.md  RVIZ_SETUP.md
simulations/41068_ignition_bringup/config/: 41068.rviz  41068_ignition_combined.rviz  gazebo_bridge_combined.yaml  gazebo_bridge_drone.yaml  gazebo_bridge_with_drone.yaml  nav2_params.yaml  nav2_params_combined.yaml  nav2_params_husky.yaml  robot_localization_combined.yaml  slam_params.yaml  slam_params_combined.yaml
simulations/41068_ignition_bringup/launch/: 41068_combined.launch.py  41068_fire_centering.launch.py  41068_gui.launch.py  41068_husky_with_joy.launch.py  41068_ignition.launch.py  41068_ignition_combined.launch.py  41068_ignition_drone.launch.py  41068_navigation.launch.py  41068_navigation_drone.launch.py  autonomous_firefighter.launch.py  nav_goal_gui.launch.py  steamdeck_gui.launch.py
simulations/41068_ignition_bringup/models/MaleVisitorOnPhone/: model.sdf
simulations/41068_ignition_bringup/models/big_fire/: model.config
simulations/41068_ignition_bringup/models/big_forest_plane/: model.sdf
simulations/41068_ignition_bringup/models/fire/: model.sdf
simulations/41068_ignition_bringup/models/low_poly_tree/: model.config  model.sdf
simulations/41068_ignition_bringup/models/low_poly_tree/meshes/: low_poly_tree.dae
simulations/41068_ignition_bringup/models/low_poly_tree_dark/: model.config  model.sdf
simulations/41068_ignition_bringup/models/low_poly_tree_dark/meshes/: low_poly_tree_dark.dae
simulations/41068_ignition_bringup/scripts/: autonomous_firefighter_node.py  cmd_vel_relay.py  drone_fire_centering_node.py  drone_search_pattern_node.py  fire_detection_node.py  nav_goal_gui.py  navigation_gui.py  positioning_data.py  randomize_fires.py  steamdeck_gui.py  steamdeck_og.py  test_dynamic_nav.py
simulations/41068_ignition_bringup/urdf/: husky.gazebo.xacro  husky.urdf.xacro
simulations/41068_ignition_bringup/urdf_drone/: parrot.gazebo.xacro  parrot.urdf.xacro
simulations/41068_ignition_bringup/web_gui/: index.html
simulations/41068_ignition_bringup/worlds/: autogen.py  bushland.sdf  bushland_spaced.sdf  generated_forest.sdf  generated_forest_200m.sdf  large_demo.sdf  simple_trees.sdf
simulations/firefighting_system/: CMakeLists.txt  DRONE_CAMERAS_README.md  DRONE_INSTALLATION.md  DRONE_README.md  NUMPY_FIX.md  README.md  ROS2_COMMANDS.md  RVIZ_USAGE.md  launch_drone_rviz.sh  package.xml
simulations/firefighting_system/config/: drone_bridge.yaml  drone_rviz.rviz  firefighting_config.yaml  firefighting_view.rviz
simulations/firefighting_system/include/: autonomous_navigation_node.hpp  environment_mapping_node.hpp  teleop_control_node.hpp  ugv_movement_node.hpp
simulations/firefighting_system/launch/: drone_simulation.launch.py  drone_with_rviz.launch.py  firefighting_system.launch.py  rviz_only.launch.py  teleop_controls.launch.py
simulations/firefighting_system/models/firefighting_drone/: model.config  model.sdf
simulations/firefighting_system/models/firefighting_drone/materials/scripts/: drone_material.material
simulations/firefighting_system/models/firefighting_drone/meshes/: README.md
simulations/firefighting_system/models/firefighting_drone/textures/: README.md
simulations/firefighting_system/scripts/: launch_integrated_sim.sh  launch_with_rviz.sh  run_drone_sim.sh  run_dual_teleop.sh  run_rviz_only.sh
simulations/firefighting_system/src/: autonomous_navigation_node.cpp  drone_camera_simple.py  drone_camera_viewer.py  drone_teleop_control.py  drone_teleop_ignition.py  drone_teleop_ros.py  environment_mapping_node.cpp  teleop_control_node.cpp  ugv_movement_node.cpp
simulations/firefighting_system/worlds/: drone_test_world.sdf  firefighting_test_world.sdf
subsystems/: CMakeLists.txt  frames_2025-09-30_21.49.08.gv  package.xml
subsystems/launch/: drone_fire_search.launch.py  drone_search_pattern.launch.py  drone_teleop.launch.py  fire_centering.launch.py  husky_joy_teleop.launch.py  steamdeck_gui.launch.py
subsystems/src/: combined_joy_teleop.cpp  drone_joy_teleop.cpp  drone_keyboard_teleop.cpp  drone_search_pattern.cpp  drone_teleop.cpp  fire_centering_node.py  husky_joy_teleop.cpp
(+33 files in other folders)
