<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>firefighting_system</name>
  <version>0.1.0</version>
  <description>Firefighting robot system with teleop, movement, mapping, and navigation nodes</description>
  <maintainer email="team@firefighting.com">Firefighting Team</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <!-- Navigation and SLAM -->
  <depend>nav2_core</depend>
  <depend>nav2_util</depend>
  <depend>nav2_msgs</depend>
  <depend>slam_toolbox</depend>

  <!-- Robot control -->
  <depend>ackermann_msgs</depend>
  <depend>teleop_twist_keyboard</depend>

  <!-- Visualization -->
  <depend>rviz2</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
